fixed col width calculating col gap

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ nav i {
 }
 
 .col {
-  flex-basis: calc(100% / 3 - 14px);
+  flex-basis: calc(100% / 3 - (20px * 2 / 3));
   margin-bottom: 50px;
 }
 
